--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class = "container header">
-		<img src = "images/Layer%201.png" class = "logo">
+		<img src = "images/Layer_1.png" class = "logo">
 		<a href ="#" class = "header-btn"><i class="fa fa-user"></i>Account</a>
 	</div>
 	<div class="container movie-details left-box">
