Fixed video issue

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<div class = "container player">
 		<div class="row">
-			<video class = "video" src = "lorem_ipsum.vid" controls></video>
+			<video class = "video" src = "lorem_ipsum.mp4" controls></video>
 		</div>
 	</div>
 	<div class = "container series">
