--- a/static/IndexTemplate.html
+++ b/static/IndexTemplate.html
@@ -1,4 +1,3 @@
-{[
 <html>
 <head>
 	<title> Movie HEY</title>
@@ -20,7 +19,9 @@
 				<p>Cast: </p>
 				<div class = "casting">
 					<img src ="{{starphoto}}" title = "{{starname}}">
-					{%FOR 0 TO {{movierating}} %}{%FOR 0 TO {{movierating}} %}{%rating%}{%ENDFOR%}{%ENDFOR%}
+						{%FOR 0 TO movierating %}
+							{% rating %}
+						{%ENDFOR%}
 				</div>
 				<a href="#"><i class="fa fa-play"></i>Watch Now Alone</a>
 				<a href="#" class="watch2-btn"><i class="fa fa-play"></i>Watch Now with friends</a>
@@ -40,10 +41,13 @@
 		<div class="row">
 			<div class = "col-md-12">
 				<div class="row">
-					{%FOR 0 TO 6 %}{%recommended%}{%ENDFOR%}
+					{%FOR 0 TO recommended%}
+						{% recommended %}
+					{%ENDFOR%}
 				</div>
 			</div>
 	</div>
 	</div>
 </body>
 </html>
+
