2 pages are ready

--- a/static/index.html
+++ b/static/index.html
@@ -17,13 +17,13 @@
 			</h1>
             <h3>И ты смотришь фильмы вместе с друзьми во время карантина</h3>
             <p>Готовы смотреть? </p>
-			<a href="#" class="btn btn-rounded">Выбрать фильм</a>
+			<a href="#htop" class="btn btn-rounded">Выбрать фильм</a>
         </div>
     </header>
     <section class="style-cards">
         <div class="card-0">
 			<div class="category">
-				<span>Recomendados</span>
+				<span id = "htop">Recomendados</span>
 					<div class="slider">
 						<div class="movie">
 							<img src="images/video_001.jpg" alt="" />
