--- a/static/moviepage.html
+++ b/static/moviepage.html
@@ -1,12 +1,14 @@
 <html>
 <head>
 	<title> Movie HEY</title>
-	<link rel = "stylesheet" href = "style.css">
+	<link rel = "stylesheet" href = "stylemp.css">
 	<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">	
-	<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">	
-	
+	<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<div class = moviepage>
 	<div class = "container header">
 		<img src = "images/Layer_1.png" class = "logo">
 		<a href ="#" class = "header-btn"><i class="fa fa-user"></i>Account</a>
@@ -24,7 +26,7 @@
 					<img src ="images/cat.png" title = "Woosh3">
 					<img src ="images/cat.png" title = "Woosh4">
 				</div>
-				<a href="#"><i class="fa fa-play"></i>Watch Now Alone</a>
+				<a href="#" class = "btn-rounded"><i class="fa fa-play"></i>Watch Now Alone</a>
 				<a href="#" class="watch2-btn"><i class="fa fa-play"></i>Watch Now with friends</a>
 			</div>
 			<div class = "col-md-6 text-center" >
@@ -63,6 +65,36 @@
 				</div>
 			</div>
 	</div>
+	</div>
+	<footer class="footer">
+		<p>Вопросы? 8 800 555 35 35</p>
+		<div class="footer-cols">
+			<ul>
+				<li><a href="#">FAQ</a></li>
+				<li><a href="#">Investor Relations</a></li>
+				<li><a href="#">Privacy</a></li>
+				<li><a href="#">Speed Test</a></li>
+			</ul>
+			<ul>
+				<li><a href="#">Help Centre</a></li>
+				<li><a href="#">Jobs</a></li>
+				<li><a href="#">Cookie Preferences</a></li>
+				<li><a href="#">Watch for Free</a></li>
+			</ul>
+			<ul>
+				<li><a href="#">Account</a></li>
+				<li><a href="#">Ways to Watch</a></li>
+				<li><a href="#">Corporate Information</a></li>
+				<li><a href="#">Legal Notices</a></li>
+			</ul>
+			<ul>
+				<li><a href="#">Media Centre</a></li>
+				<li><a href="#">Terms of Use</a></li>
+				<li><a href="#">Contact Us</a></li>
+				<li><a href="#">Woosh</a></li>
+			</ul>
+		</div>
+	</footer>
 	</div>
 </body>
 </html>
