No shadows, squared pictures

--- a/static/index.html
+++ b/static/index.html
@@ -23,52 +23,54 @@
     <section class="style-cards">
         <div class="card-0">
 			<div class="category">
-				<span id = "htop">Recomendados</span>
+				<span id = "htop">Популярные фильмы</span>
 					<div class="slider">
 						<div class="movie">
-							<img src="images/video_001.jpg" alt="" />
+							<img src="images/img1.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_002.jpg" alt="" />
+							<img src="images/img2.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_003.jpg" alt="" />
+							<img src="images/img3.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_004.jpg" alt="" />
+							<img src="images/img4.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_005.jpg" alt="" />
+							<img src="images/img5.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_001.jpg" alt="" />
+							<img src="images/img1.jpg" alt="" />
 						</div>
 					</div>
 				</div>
 				<div class="category">
-					<span>Melhores</span>
+					<span>Мелодромы</span>
 					<div class="slider">
 						<div class="movie">
-							<img src="images/video_002.jpg" alt="" />
+							<img src="images/img2.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_004.jpg" alt="" />
+							<img src="images/img3.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_005.jpg" alt="" />
+							<img src="images/img4.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_003.jpg" alt="" />
+							<img src="images/img5.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_001.jpg" alt="" />
+							<img src="images/img6.jpg" alt="" />
 						</div>
 						<div class="movie">
-							<img src="images/video_002.jpg" alt="" />
+							<img src="images/img2.jpg" alt="" />
 						</div>
 					</div>
 				</div>
 		</div>
+		
+		
 	</section>
     <footer class="footer">
         <p>Вопросы? 8 800 555 35 35</p>
