--- a/static/IndexTemplate.html
+++ b/static/IndexTemplate.html
@@ -11,8 +11,8 @@
 		<img src = "images/Layer_1.png" class = "logo"> 
 		<a href ="#" class = "header-btn"><i class="fa fa-user"></i>Account</a>
 	</div>
-	<div class="container movie-details left-box">
-		<div class="row">
+	<div class="container movie-details left-box" style="display:contents">
+		<div class="row"  style="padding-left:15%; padding-right:15%">
 			<div class = "col-md-6">
 				<h1>{{movietittle}}</h1>
 				<p>{{moviedescription}}</p>
@@ -26,7 +26,7 @@
 				<a href="#"><i class="fa fa-play"></i>Watch Now Alone</a>
 				<a href="#" class="watch2-btn"><i class="fa fa-play"></i>Watch Now with friends</a>
 			</div>
-			<div class = "col-md-6 text-center" >
+			<div class = "col-md-6 text-right" >
 				<img src ="{{movielogo}}" title = "{{movietittle}}" class = "movie-img">
 			</div>
 		</div>
