added fake data, fixed templates, working for demonstrations

--- a/static/watch.html
+++ b/static/watch.html
@@ -50,4 +50,4 @@
 </body>
 </html>
 
-{[movietittle,moviedescription,starphoto,starname,movielogo,moviename,videolink,recommended]}
+{[movietittle,moviedescription,starphoto,starname,movielogo,moviename,videolink,recommended,tittles]}
