--- a/static/Index.html
+++ b/static/Index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 	<title> Movie HEY</title>
@@ -9,25 +8,30 @@
 </head>
 <body>
 	<div class = "container header">
-		<img src = "images/Layer_1.png" class = "logo"> 
-		<a href ="#" class = "header-btn"><i class="fa fa-user"></i>Account</a>
+
 	</div>
 	<div class="container movie-details left-box" style="display:contents">
 		<div class="row"  style="padding-left:15%; padding-right:15%">
-			<div class = "col-md-6">
+			<div class = "col-md-8">
 				<h1>{{movietittle}}</h1>
-				<p>{{moviedescription}}</p>
-				<p>Cast: </p>
-				<div class = "casting">
-					<img src ="{{starphoto}}" title = "{{starname}}">
+				<div class = "rating">
 						{%FOR 0 TO movierating %}
 							{% rating %}
 						{%ENDFOR%}
 				</div>
+				<h5>{{moviedescription}}</h5>
+				<h5>Cast: </h5>
+				<div class="container">
+					<div class="row align-items-center">
+						{%FOR 0 TO stars %}
+							{% cast %}
+						{%ENDFOR%}
+					</div>
+				</div>
 				<a href="#"><i class="fa fa-play"></i>Watch Now Alone</a>
 				<a href="#" class="watch2-btn"><i class="fa fa-play"></i>Watch Now with friends</a>
 			</div>
-			<div class = "col-md-6 text-right" >
+			<div class = "col-md-4 text-right" >
 				<img src ="{{movielogo}}" title = "{{movietittle}}" class = "movie-img">
 			</div>
 		</div>
@@ -42,7 +46,7 @@
 		<div class="row">
 			<div class = "col-md-12">
 				<div class="row">
-					{%FOR 0 TO recommended%}
+					{%FOR 0 TO recommended %}
 						{% recommended %}
 					{%ENDFOR%}
 				</div>
@@ -52,4 +56,4 @@
 </body>
 </html>
 
-{[movietittle,moviedescription,starphoto,starname,movielogo,moviename,videolink,recommended]}
+{[movietittle,moviedescription,starphoto,stars,actor,actorname,starname,movielogo,moviename,videolink,recommended,tittles]}
