--- a/static/watch.html
+++ b/static/watch.html
@@ -7,10 +7,11 @@
 	
 </head>
 <body>
-	<div class = "container header">
-
+	<div class = "container header" style="padding-left:2%; padding-right:2%">
+		<img src = "images/Layer_1.png" class = "logo">
+		<a href ="#" class = "header-btn"><i class="fa fa-user"></i>Account</a>
 	</div>
-	<div class="container movie-details left-box" style="display:contents">
+	<div class="container movie-details left-box" style="display:block">
 		<div class="row"  style="padding-left:15%; padding-right:15%">
 			<div class = "col-md-8">
 				<h1>{{movietittle}}</h1>
@@ -22,7 +23,7 @@
 				<h5>{{moviedescription}}</h5>
 				<h5>Cast: </h5>
 				<div class="container">
-					<div class="row align-items-center">
+					<div class="row justify-content-md-left">
 						{%FOR 0 TO stars %}
 							{% cast %}
 						{%ENDFOR%}
