Added index page. Some minor style changes

--- a/static/Index.html
+++ b/static/Index.html
@@ -2,6 +2,7 @@
 <head>
 	<title> Movie HEY</title>
 	<link rel = "stylesheet" href = "style.css">
+	<link rel="shortcut icon" href= "/images/cat.png">
 	<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">	
 	<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">	
 	
@@ -13,48 +14,18 @@
 	</div>
 	<div class="container movie-details left-box" style="display:block">
 		<div class="row"  style="padding-left:10%; padding-right:10%">
-			<div class = "col-md-8">
-				<h1>{{movietittle}}</h1>
-				<div class = "rating">
-						{%FOR 0 TO movierating %}
-							{% rating %}
-						{%ENDFOR%}
-				</div>
-				<h5>{{moviedescription}}</h5>
-				<h5>Cast: </h5>
-				<div class="container">
-					<div class="row justify-content-md-left">
-						{%FOR 0 TO stars %}
-							{% cast %}
-						{%ENDFOR%}
-					</div>
-				</div>
-				<a href="#"><i class="fa fa-play"></i>Watch Now Alone</a>
-				<a href="#" class="watch2-btn"><i class="fa fa-play"></i>Watch Now with friends</a>
-			</div>
-			<div class = "col-md-4 text-right" >
-				<img src ="{{movielogo}}" title = "{{movietittle}}" class = "movie-img">
-			</div>
+				<a href="#"><i class="fa fa-play big"></i>Watch Now Alone</a>
+				<a href="#" class="watch2-btn big"><i class="fa fa-play"></i>Watch Now with friends</a>
 		</div>
 	</div>
-	<div class = "container player">
+	<div class="container series">
 		<div class="row">
-			<video class = "video" src = "{{videolink}}" controls></video>
+			{%FOR 0 TO best %}
+				{% best %}
+			{%ENDFOR%}
 		</div>
-	</div>
-	<div class = "container series">
-		<h3>Popular Movies</h3>
-		<div class="row">
-			<div class = "col-md-12">
-				<div class="row">
-					{%FOR 0 TO recommended %}
-						{% recommended %}
-					{%ENDFOR%}
-				</div>
-			</div>
-	</div>
 	</div>
 </body>
 </html>
 
-{[movietittle,moviedescription,starphoto,stars,actor,actorname,starname,movielogo,moviename,videolink,recommended,tittles]}
+{[best, title]}
